[gd_scene load_steps=11 format=2]

[ext_resource path="res://sprites/theme.tres" type="Theme" id=1]
[ext_resource path="res://fotos/caja.jpg" type="Texture" id=2]
[ext_resource path="res://scripts/Vender.gd" type="Script" id=3]
[ext_resource path="res://sprites/alimento.png" type="Texture" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.290196, 0.6, 0.529412, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Vender" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="BtnVolver" type="Button" parent="."]
margin_left = 35.0
margin_top = 35.0
margin_right = 110.0
margin_bottom = 81.0
rect_scale = Vector2( 2, 2 )
focus_mode = 0
text = "Volver"
__meta__ = {
"_edit_lock_": true
}

[node name="Titulo" type="Label" parent="."]
margin_left = 257.0
margin_top = 37.0
margin_right = 411.0
margin_bottom = 70.0
rect_scale = Vector2( 2.5, 2.5 )
text = "Nueva Venta"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Foto" type="TextureRect" parent="."]
visible = false
margin_left = 261.0
margin_top = 144.0
margin_right = 668.0
margin_bottom = 475.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true
}

[node name="BtnFoto" type="Button" parent="."]
margin_left = 279.0
margin_top = 151.0
margin_right = 464.0
margin_bottom = 310.0
rect_scale = Vector2( 2, 2 )
focus_mode = 0
text = "Subir Foto"
__meta__ = {
"_edit_lock_": true
}

[node name="BtnLimpiar" type="Button" parent="."]
visible = false
margin_left = 500.0
margin_top = 499.0
margin_right = 576.0
margin_bottom = 545.0
rect_scale = Vector2( 2, 2 )
focus_mode = 0
text = "Borrar"
__meta__ = {
"_edit_lock_": true
}

[node name="ImgCat" type="TextureRect" parent="."]
margin_left = 53.0
margin_top = 380.0
margin_right = 222.0
margin_bottom = 539.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true
}

[node name="TxtCat" type="Label" parent="ImgCat"]
margin_left = -5.0
margin_top = 160.0
margin_right = 117.0
margin_bottom = 193.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Alimentos"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="BtnCategoria" type="Button" parent="."]
margin_left = 49.0
margin_top = 364.0
margin_right = 152.0
margin_bottom = 489.0
rect_scale = Vector2( 1.75, 1.75 )
focus_mode = 0
custom_colors/font_color_disabled = Color( 0.592157, 0.596078, 0.596078, 1 )
custom_colors/font_color_hover_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_colors/font_color = Color( 0.141176, 0.454902, 0.388235, 1 )
custom_colors/font_color_hover = Color( 0.643137, 0.498039, 0.188235, 1 )
custom_colors/font_color_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="BtnCalidad" type="Button" parent="."]
margin_left = 32.0
margin_top = 626.0
margin_right = 75.0
margin_bottom = 672.0
rect_scale = Vector2( 1.75, 1.75 )
focus_mode = 0
custom_colors/font_color_disabled = Color( 0.592157, 0.596078, 0.596078, 1 )
custom_colors/font_color_hover_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_colors/font_color = Color( 0.141176, 0.454902, 0.388235, 1 )
custom_colors/font_color_hover = Color( 0.643137, 0.498039, 0.188235, 1 )
custom_colors/font_color_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "(N)"
__meta__ = {
"_edit_lock_": true
}

[node name="LinNombre" type="LineEdit" parent="."]
margin_left = 126.0
margin_top = 631.0
margin_right = 395.0
margin_bottom = 677.0
rect_scale = Vector2( 2, 2 )
align = 1
max_length = 32
placeholder_text = "Nombre"
placeholder_alpha = 0.4
caret_blink = true
__meta__ = {
"_edit_lock_": true
}

[node name="LinDescripcion" type="TextEdit" parent="."]
margin_left = 59.0
margin_top = 746.0
margin_right = 403.0
margin_bottom = 881.0
rect_scale = Vector2( 1.75, 1.75 )
wrap_enabled = true
caret_blink = true
__meta__ = {
"_edit_lock_": true
}

[node name="Costo" type="Label" parent="."]
margin_left = 150.0
margin_top = 975.0
margin_right = 301.0
margin_bottom = 1018.0
rect_scale = Vector2( 2, 2 )
text = "valor:"
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Pan1" type="Panel" parent="."]
margin_left = 338.0
margin_top = 1062.0
margin_right = 381.0
margin_bottom = 1115.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="LinCosto" type="SpinBox" parent="."]
margin_left = 61.0
margin_top = 1043.0
margin_right = 222.0
margin_bottom = 1089.0
rect_scale = Vector2( 2, 2 )
max_value = 1e+06
step = 1000.0
rounded = true
align = 1
prefix = "$"
__meta__ = {
"_edit_lock_": true
}

[node name="Disponible" type="Label" parent="."]
margin_left = 330.0
margin_top = 973.0
margin_right = 476.0
margin_bottom = 1016.0
rect_scale = Vector2( 2, 2 )
text = "disponibles:"
align = 2
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Pan2" type="Panel" parent="."]
margin_left = 629.0
margin_top = 1062.0
margin_right = 672.0
margin_bottom = 1115.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="LinDisponible" type="SpinBox" parent="."]
margin_left = 403.0
margin_top = 1043.0
margin_right = 538.0
margin_bottom = 1089.0
rect_scale = Vector2( 2, 2 )
min_value = 1.0
max_value = 1000.0
value = 1.0
rounded = true
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="BtnVender" type="Button" parent="."]
margin_left = 256.0
margin_top = 1152.0
margin_right = 378.0
margin_bottom = 1198.0
rect_scale = Vector2( 2, 2 )
focus_mode = 0
text = "Vender"
__meta__ = {
"_edit_lock_": true
}

[node name="Mensaje" type="Label" parent="."]
margin_left = 38.0
margin_top = 154.0
margin_right = 145.0
margin_bottom = 252.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0.627451, 0.215686, 0.0745098, 1 )
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Reloj" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="pressed" from="BtnVolver" to="." method="_on_BtnVolver_pressed"]
[connection signal="pressed" from="BtnFoto" to="." method="_on_BtnFoto_pressed"]
[connection signal="pressed" from="BtnLimpiar" to="." method="_on_BtnLimpiar_pressed"]
[connection signal="pressed" from="BtnCategoria" to="." method="_on_BtnCategoria_pressed"]
[connection signal="pressed" from="BtnCalidad" to="." method="_on_BtnCalidad_pressed"]
[connection signal="pressed" from="BtnVender" to="." method="_on_BtnVender_pressed"]
[connection signal="timeout" from="Reloj" to="." method="_on_Reloj_timeout"]
